# luncher

./: .env.example  .gitignore  GIT_HISTORY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  _start.sh  _stop.sh  luncher.sh  luncher_terminal.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: daily-menus.yml
scripts/: generate_static.py
src/luncher/: __init__.py
src/luncher/cli/: __init__.py  app.py
src/luncher/config/: __init__.py  restaurants.yaml  settings.py
src/luncher/core/: __init__.py  ai.py  cache.py  models.py
src/luncher/scrapers/: __init__.py  base.py  registry.py
src/luncher/scrapers/implementations/: __init__.py  chilli_lime.py  porke.py  pub_na_plech.py  spravovna.py  utelleru.py
src/luncher/web/: __init__.py  app.py
src/luncher/web/templates/: index.html
